tests/unit/fake_data_root/sos_commands/networking/ip_netns_exec_snat-1e086be2-93c2-4740-921d-3e3237f23959_ip6tables-save
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:12 2021
*raw
:PREROUTING ACCEPT [143:28255]
:OUTPUT ACCEPT [8:928]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
COMMIT
# Completed on Tue Aug  3 10:32:12 2021
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:12 2021
*mangle
:PREROUTING ACCEPT [143:28255]
:INPUT ACCEPT [40:2240]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8:928]
:POSTROUTING ACCEPT [8:928]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
:neutron-l3-agent-scope - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-scope
-A neutron-l3-agent-PREROUTING -m connmark ! --mark 0x0/0xffff0000 -j CONNMARK --restore-mark --nfmask 0xffff0000 --ctmask 0xffff0000
COMMIT
# Completed on Tue Aug  3 10:32:12 2021
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:12 2021
*filter
:INPUT ACCEPT [40:2240]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8:928]
:neutron-filter-top - [0:0]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-local - [0:0]
:neutron-l3-agent-scope - [0:0]
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A neutron-filter-top -j neutron-l3-agent-local
-A neutron-l3-agent-FORWARD -j neutron-l3-agent-scope
COMMIT
# Completed on Tue Aug  3 10:32:12 2021
